# Aqib-s_Wikipedia_RAG_Assistant_with_Groq_LLM

./: .env.example  .gitignore  README.md  pyproject.toml
app/: chain.py  ingest.py  load_wikipedia.py  server.py
